src/objects/SPE_SurveyAnswer__c.object
<CustomObject>
    <description>For each Survey Question this object defines multiple Answers. The Answers have different types (Ex. Free text, Picklist, single answer etc.).</description>
    <fields>
        <fullName>Choices__c</fullName>
        <description>Choices for the particular question.</description>
        <inlineHelpText>User can have choices for a particular question.</inlineHelpText>
        <label>Choices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>To show answers in order.</description>
        <inlineHelpText>To show answers in order.</inlineHelpText>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimarySurvey_Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PrimarySurvey Answer</label>
        <referenceTo>SPE_SurveyAnswer__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Based on the answer it will update the Score.</description>
        <inlineHelpText>Based on users answer it will update the Score.</inlineHelpText>
        <label>Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Language__c</fullName>
        <description>To store secondary Language</description>
        <label>Secondary Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <description>Automatically captures Questions while creating answers under Question Object.</description>
        <inlineHelpText>User can select questions for which they are creating answers.</inlineHelpText>
        <label>SurveyQuestion</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipName>SPE_SurveyAnswers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Answer</label>
    <nameField>
        <displayFormat>Ans-{00000}</displayFormat>
        <label>Answers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>